fix spacing

--- a/frontend/sass/laletterbuilder/styles.scss
+++ b/frontend/sass/laletterbuilder/styles.scss
@@ -6,9 +6,18 @@
 // NoRent at the time of this writing.)
 $laletterbuilder-root: "../laletterbuilder";
 
-$jf-body-family: "Degular", Arial, Helvetica, sans-serif;
-$jf-title-family: "Degular Display", Arial, Helvetica, sans-serif;
-$jf-alt-title-family: "Suisse Int'l Mono", "Courier New", Courier, monospace;
+$jf-body-family: "Degular",
+Arial,
+Helvetica,
+sans-serif;
+$jf-title-family: "Degular Display",
+Arial,
+Helvetica,
+sans-serif;
+$jf-alt-title-family: "Suisse Int'l Mono",
+"Courier New",
+Courier,
+monospace;
 
 @import "../_util.scss";
 @import "./_bulma-overrides.scss";
@@ -79,10 +88,12 @@ $jf-navbar-height: 70px;
     line-height: 2.25rem;
     letter-spacing: 0.03rem;
   }
+
   h2 {
     font-size: 1.8rem;
     line-height: 1.8rem;
   }
+
   p,
   .subtitle {
     font-size: 1.5rem;
@@ -120,13 +131,16 @@ $jf-navbar-height: 70px;
     &.has-text-centered {
       text-align: left !important;
     }
+
     &.has-text-grey {
       color: $primary !important;
     }
   }
+
   progress {
     border: 1px solid $primary;
   }
+
   progress::-webkit-progress-bar {
     background: $secondary;
   }
@@ -140,22 +154,28 @@ $jf-navbar-height: 70px;
     margin-bottom: 1rem;
     border-bottom: 1px solid $primary;
   }
+
   .jf-accordion-item {
     margin-bottom: 1rem;
+
     details {
       margin-bottom: 0;
+
       summary {
         font-size: 1.125rem;
         padding: 0 0 1rem 0;
         margin: 0;
         border-bottom: 1px solid $primary;
+
         &:focus {
           outline-offset: 5px;
         }
+
         // Fix bug where scrollbars appear on accordion titles
         .media-content {
           overflow-x: unset;
         }
+
         .media-right span {
           text-decoration: underline;
           font-size: 0.875rem;
@@ -171,10 +191,12 @@ $jf-navbar-height: 70px;
           min-height: 2.8rem;
           border-radius: 4px;
         }
+
         // Styling of the check mark symbol itself:
-        input:checked + .jf-checkbox-symbol {
+        input:checked+.jf-checkbox-symbol {
           background-position: 98%;
         }
+
         .jf-label-text {
           margin: 0.3em 0.6em 0.3em 0;
           font-size: 0.875rem;
@@ -184,7 +206,7 @@ $jf-navbar-height: 70px;
           color: $primary;
         }
 
-        input:checked ~ .jf-label-text {
+        input:checked~.jf-label-text {
           color: $secondary;
         }
       }
@@ -220,6 +242,7 @@ $jf-navbar-height: 70px;
       font-size: 1.125rem;
       line-height: 100%;
     }
+
     .jf-card-button {
       margin-top: 2rem;
       margin-bottom: 2rem;
@@ -229,14 +252,17 @@ $jf-navbar-height: 70px;
 
     .jf-la-letter-time {
       margin: 0em;
+
       .jf-clock-icon {
         float: left;
+
         .image {
-          margin: 0.5rem;
+          margin: 0.2rem;
         }
       }
     }
   }
+
   hr {
     margin: 1rem 0px 1rem 0px;
     background-color: black;
@@ -247,10 +273,13 @@ $jf-navbar-height: 70px;
   // Other places, we want the tap target to spill over the sides of the item. Not here.
   .jf-accordion-item {
     margin: 0rem;
+
     details {
       // Since this accordion is contained within another object, we don't need extra space at the bottom.
       margin-bottom: 0;
+
       summary {
+
         // Fix bug where scrollbars appear on accordion titles
         .media-content {
           overflow-x: unset;
@@ -273,6 +302,7 @@ $footer-offset: 1rem;
 
 .jf-norent-internal-above-footer-content {
   min-height: calc(100vh - #{$jf-navbar-height * 2});
+
   @include tablet {
     margin-top: 4rem;
     margin-bottom: 4rem;
@@ -306,6 +336,7 @@ ol.is-marginless {
     background-color: $primary;
     color: $secondary;
   }
+
   .message-body {
     background-color: $secondary;
     color: $primary;
